Fix image overflow in project page

--- a/src/templates/project.module.scss
+++ b/src/templates/project.module.scss
@@ -19,7 +19,7 @@ $rfs-factor: 4;
   height: auto;
 }
 .content {
-  max-width: 600px;
+  max-width: 700px;
   margin: auto;
   > p {
     @include text-style;
